@@ -2,18 +2,23 @@ package uk.gov.justice.laa.crime.hardship.mapper;
 
 import org.springframework.stereotype.Component;
 import uk.gov.justice.laa.crime.enums.Frequency;
+import uk.gov.justice.laa.crime.enums.HardshipReviewDetailCode;
 import uk.gov.justice.laa.crime.enums.HardshipReviewDetailType;
+import uk.gov.justice.laa.crime.enums.RequestType;
 import uk.gov.justice.laa.crime.hardship.dto.HardshipResult;
 import uk.gov.justice.laa.crime.hardship.dto.HardshipReviewDTO;
 import uk.gov.justice.laa.crime.hardship.dto.maat_api.SolicitorCosts;
-import uk.gov.justice.laa.crime.hardship.model.*;
+import uk.gov.justice.laa.crime.hardship.model.DeniedIncome;
+import uk.gov.justice.laa.crime.hardship.model.ExtraExpenditure;
+import uk.gov.justice.laa.crime.hardship.model.HardshipMetadata;
+import uk.gov.justice.laa.crime.hardship.model.HardshipReview;
 import uk.gov.justice.laa.crime.hardship.model.maat_api.*;
-import uk.gov.justice.laa.crime.enums.HardshipReviewDetailCode;
-import uk.gov.justice.laa.crime.enums.RequestType;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
@@ -53,7 +58,7 @@ public class PersistHardshipMapper implements RequestMapper<ApiPersistHardshipRe
                 )
                 .withNotes(metadata.getNotes())
                 .withDecisionNotes(metadata.getDecisionNotes())
-                .withSolicitorCosts(
+                .withSolicitorCosts(Objects.isNull(hardship.getSolicitorCosts()) ? null :
                         SolicitorCosts.builder()
                                 .rate(hardship.getSolicitorCosts().getRate())
                                 .disbursements(hardship.getSolicitorCosts().getDisbursements())
@@ -73,11 +78,10 @@ public class PersistHardshipMapper implements RequestMapper<ApiPersistHardshipRe
 
     private List<ApiHardshipDetail> convertHardshipDetails(HardshipReview hardship, String username) {
 
-        return Stream.concat(
-                Stream.of(hardship.getDeniedIncome(), hardship.getExtraExpenditure())
-                        .flatMap(Collection::stream)
-                        .map(item -> {
-                            var detail = new ApiHardshipDetail()
+        List<ApiHardshipDetail> apiHardshipDetails = Stream.of(hardship.getDeniedIncome(), hardship.getExtraExpenditure())
+                .flatMap(Collection::stream)
+                .map(item -> {
+                            ApiHardshipDetail detail = new ApiHardshipDetail()
                                     .withAmount(item.getAmount())
                                     .withOtherDescription(item.getDescription())
                                     .withUserCreated(username)
@@ -103,16 +107,16 @@ public class PersistHardshipMapper implements RequestMapper<ApiPersistHardshipRe
                                         .withDetailReason(expenditure.getReasonCode());
                             }
                             return detail;
-                        }),
-
-                Stream.of(
-                        new ApiHardshipDetail()
-                                .withDetailType(HardshipReviewDetailType.SOL_COSTS)
-                                .withAmount(hardship.getSolicitorCosts().getEstimatedTotal())
-                                .withFrequency(Frequency.ANNUALLY)
-                                .withAccepted("Y")
-                )
-        ).toList();
+                        }
+                ).collect(Collectors.toList());
+        if (Objects.nonNull(hardship.getSolicitorCosts())) {
+            apiHardshipDetails.add(new ApiHardshipDetail()
+                    .withDetailType(HardshipReviewDetailType.SOL_COSTS)
+                    .withAmount(hardship.getSolicitorCosts().getEstimatedTotal())
+                    .withFrequency(Frequency.ANNUALLY)
+                    .withAccepted("Y"));
+        }
+        return apiHardshipDetails;
     }
 
     private List<ApiHardshipProgress> convertHardshipProgress(HardshipMetadata metadata) {
